[package]
name = "day13"
version = "0.1.0"
authors = ["Matt Whelan <matt@blacklogik.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
itertools = "0.9.0"
anyhow = "1.0.34"
thiserror = "1.0.22"
lazy_static = "1.4.0"
two_space = { path = "../two_space" }
machine = { path = "../machine" }
num = "0.3.1"